# MuseTalk

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  download_models.py  download_weights.sh  pyproject.toml  requirements.lock.txt  run_musetalk.py  test_api.py
api/: __init__.py  inference_service.py  main.py  schemas.py
configs/inference/: my_test.yaml  realtime_image.yaml  test_image.yaml
scripts/: inference.py  realtime_inference.py
