[project]
name = "musetalk"
version = "0.1.0"
description = "Real-Time High-Fidelity Video Dubbing via Spatio-Temporal Sampling"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.0.1+cu118",
    "torchvision==0.15.2+cu118",
    "torchaudio==2.0.2+cu118",
    "diffusers==0.30.2",
    "accelerate==0.28.0",
    "numpy==1.23.5",
    "tensorflow==2.12.0",
    "tensorboard==2.12.0",
    "opencv-python==4.9.0.80",
    "soundfile==0.12.1",
    "transformers==4.39.2",
    "huggingface_hub==0.30.2",
    "librosa==0.11.0",
    "einops==0.8.1",
    "gradio==5.24.0",
    "gdown",
    "requests",
    "imageio[ffmpeg]",
    "omegaconf",
    "ffmpeg-python",
    "moviepy",
    "openmim",
]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[project.scripts]
musetalk = "main:main"
